fix(admin): improve admin file management
- Fix admin file validation
- Improve admin file checking logic
- Optimize admin operations
- Clean up admin code